feat: complete Phase 4 DevOps and Phase 5 Capstone TDD implementation and audit pass